# immodest

./: .rtd-environment.yml  .travis.yml  README.rst  index.html  params.json  setup.cfg
docs/: index.rst
docs/immodest/: index.rst
immodest/: __init__.py
immodest/tests/: coveragerc
licenses/: LICENSE.rst
