[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = immodest
description = Image Model Estimator
long_description = Universal modelling of galaxy structure in arbitrary sets of image data
author = Steven Bamford
author_email = steven@stevenbamford.com
license = BSD
url = http://bamford.github.io/immodest
edit_on_github = True
github_project = bamford/immodest
